fixing some possible horizontal scrolling bugs on the homepage

--- a/assets/scss/pages/home.scss
+++ b/assets/scss/pages/home.scss
@@ -245,6 +245,11 @@
     }
   }
 
+  .overflow-mask { 
+    overflow: hidden;
+    max-width: 100vw;
+  }
+
   #build-with-web {
     padding-bottom: 64px;
 
@@ -620,7 +625,7 @@
     }
 
     .quotees {
-      margin: 300px -32px 10px;
+      margin: 220px -32px 10px;
       padding: 0;
       list-style: none;
       display: flex;
@@ -635,7 +640,7 @@
         margin-bottom: 32px;
         transition: .2s opacity;
         display: block;
-        padding-left: 52px;
+        padding: 6px 18px 10px 60px;
         position: relative;
 
         &.is-active {
@@ -646,7 +651,7 @@
       img {
         width: 50px;
         position: absolute;
-        left: 0;
+        left: 8px;
         margin-right: 8px;
       }
 
@@ -669,6 +674,7 @@
       }
 
       @media (max-width: $screen-md-max) {
+        margin-top: 300px;
         margin-left: 0;
         margin-right: 0;
       }
@@ -681,7 +687,6 @@
         0px 8px 16px rgba(2, 8, 20, 0.1), 
         0px 4px 8px rgba(2, 8, 20, 0.08);
       border-radius: 40px;
-      padding: 10px 6px 8px;
       box-sizing: content-box;
       transition: .2s all ease-out;
     }
